fixes the new layout bugs

--- a/assets/src/scss/_global.scss
+++ b/assets/src/scss/_global.scss
@@ -703,14 +703,18 @@ figure {
 	}
 }
 
-.entryTitle {
+.title {
+	margin-bottom: ($baseline * 2);
+}
+
+.title-item {
 	max-width: 700px;
 	margin-bottom: 0;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.entryTitle,
+.title-primary,
 .entry-title {
 	font-weight: normal;
 	font-style: italic;
@@ -718,7 +722,7 @@ figure {
 }
 
 .entry-title-date,
-.entryTitle-date {
+.title-primary-date {
 	position: absolute;
 	bottom: 100%;
 	font-family: $font-family-mono;
